Русский язык средняя школа 2

--- a/шаблон — направления-средняя-школа-русский-язык.html
+++ b/шаблон — направления-средняя-школа-русский-язык.html
@@ -386,24 +386,7 @@
 
 
 
-        <div class="container">
-            <!-- 1 секция  баннер и текст-->
-            <section class="uk-flex-between one-section uk-padding uk-margin-large-bottom" uk-grid>
-                <h4 class="uk-text-center title-trend-block uk-scrollspy-inview "
-                    uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">Знание русского языка - путь к успешной
-                    жизни
-                </h4>
-                <p class="uk-text-center uk-scrollspy-inview "
-                    uk-scrollspy="cls: uk-animation-slide-bottom; delay: 400">
-                    В мире постоянно развивающихся технологий общение все чаще проходит в Интернете. Не только дети, но
-                    и взрослые привыкли пользоваться автозаменой и разнообразием сервисов с проверкой орфографии.
-                </p>
-                <div class="uk-width-expand@m uk-margin">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
-                        uk-scrollspy="cls: uk-animation-fade; delay: 600">
-                </div>
-            </section>
-        </div>
+
 
         <div class="problems problems-srscola">
             <div class="container">
@@ -418,6 +401,10 @@
                         В мире постоянно развивающихся технологий общение все чаще проходит в Интернете. Не только дети,
                         но и взрослые привыкли пользоваться автозаменой и разнообразием сервисов с проверкой орфографии.
                     </p>
+                    <div class="uk-width-expand@m uk-margin">
+                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                            uk-scrollspy="cls: uk-animation-fade; delay: 600">
+                    </div>
                 </section>
             </div>
         </div>
@@ -799,19 +786,20 @@
                     <h4 class="uk-text-center title-trend-block"
                         uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">Почему мы?
                     </h4>
-                    <div class="text-trend-block">Ньютоника.
-
-                        <br>Держим фокус
-                        <br>на положительные результаты
+                    <div class="text-trend-block">Учите русский язык с нами и занимайте призовые места на конкурсах и
+                        олимпиадах!
                     </div>
                     <div class="form-trend-list">
-                        <div><span class="color1"></span>комфортный темп обучения,
-                            <br>заполняем пробелы школьной программы и выходим за ее пределы
+                        <div><span class="color1"></span>используем самые эффективные методики,
+                            <br> быстрый прогресс в обучении
                         </div>
-                        <div><span class="color2"></span>всегда на связи с родителями,
-                            <br>регулярно делимся прогрессом <br>и достижениями ребенка
+                        <div><span class="color2"></span>находим подход к каждому,
+                            <br>поэтому легко опережаем школьную программу
                         </div>
-                        <div><span class="color3"></span>создаем прочную базу<br> для участия в олимпиадах без зубрежки
+                        <div><span class="color3"></span>родитель всегда в курсе, <br>
+                            потому что мы - на связи
+                        </div>
+                        <div><span class="color1"></span>работаем соблюдая ФГОС
                         </div>
 
                     </div>
