Средняя школа русский язык 3

--- a/шаблон — направления-средняя-школа-русский-язык.html
+++ b/шаблон — направления-средняя-школа-русский-язык.html
@@ -405,6 +405,11 @@
                         <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
                             uk-scrollspy="cls: uk-animation-fade; delay: 600">
                     </div>
+                    <p class="uk-text-center uk-scrollspy-inview "
+                        uk-scrollspy="cls: uk-animation-slide-bottom; delay: 400">
+                        Но во многих ситуациях использование
+                        программ-помощников просто невозможно!
+                    </p>
                 </section>
             </div>
         </div>
@@ -413,8 +418,7 @@
             <!-- 1 секция  баннер и текст-->
             <section class="uk-flex-between one-section  uk-padding uk-margin-top uk-margin-bottom" uk-grid>
                 <h4 class="uk-text-center title-trend-block uk-scrollspy-inview "
-                    uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">Но во многих ситуациях использование
-                    программ-помощников просто невозможно!
+                    uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">
                 </h4>
                 <div class="uk-width-1-2@m   uk-flex uk-flex-middle">
                     <div class="banner-content" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 600">
