Средняя школа Русский язык 4

--- a/шаблон — направления-средняя-школа-русский-язык.html
+++ b/шаблон — направления-средняя-школа-русский-язык.html
@@ -245,7 +245,7 @@
                     </div>
                 </div>
                 <div class="uk-width-expand@m uk-padding-remove">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 172.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
                 </div>
             </section>
@@ -259,8 +259,8 @@
                 </div>
                 <div alt="" class="five-section-img4 icons-radius icons-style" src=" ">
                 </div>
-                <div class="two-section-img7 icons-block icons-style">
-                    <img alt="" class="" src="https://cdn.nyutonika.ru/icons/">
+                <div class="two-section-img7  icons-block">
+                    <img alt="" class="" src="https://cdn.nyutonika.ru/icons/Перо-и-свиток.svg">
                 </div>
             </section>
             <div class="container-item">
@@ -357,7 +357,7 @@
                         <div class="uk-flex-center uk-flex uk-padding problems-img uk-grid-margin uk-first-column">
                             <img class="uk-scrollspy-inview "
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 175.png" alt="">
                         </div>
                     </div>
                     <div class="uk-child-width-1-2@l uk-child-width-1-2@m uk-padding-top uk-flex-between@l uk-flex-middle uk-flex-center uk-flex-wrap-reverse uk-grid-medium uk-grid uk-grid-stack"
@@ -365,7 +365,7 @@
                         <div class="uk-flex-center uk-flex problems-img uk-padding uk-first-column uk-grid-margin">
                             <img class="uk-scrollspy-inview "
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 176.png" alt="">
                         </div>
                         <div class="efficiency efficiency-srscola uk-first-column">
                             <ul>
@@ -402,7 +402,7 @@
                         но и взрослые привыкли пользоваться автозаменой и разнообразием сервисов с проверкой орфографии.
                     </p>
                     <div class="uk-width-expand@m uk-margin">
-                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 173-1.png" alt=""
                             uk-scrollspy="cls: uk-animation-fade; delay: 600">
                     </div>
                     <p class="uk-text-center uk-scrollspy-inview "
