--- a/шаблон — направления-средняя-школа-русский-язык.html
+++ b/шаблон — направления-средняя-школа-русский-язык.html
@@ -542,24 +542,24 @@
                 <section class="uk-flex-between one-section  uk-padding uk-margin-top uk-margin-bottom" uk-grid>
                     <div class="uk-width-1-2@m   uk-flex uk-flex-middle">
                         <div class="banner-content" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 600">
-                            <div class="h1-banner-text uk-padding napravlenia_textblock ">
+                            <div class="h1-banner-text uk-padding napravlenia_textblock_2">
                                 Многообразие запоминающихся примеров
                             </div>
                         </div>
                     </div>
-                    <div class="uk-width-expand@m   uk-margin">
-                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <div class="uk-width-expand@m uk-padding  uk-margin">
+                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 182.png" alt=""
                             uk-scrollspy="cls: uk-animation-fade; delay: 600">
                     </div>
                 </section>
                 <section class="uk-flex-between one-section  uk-padding uk-margin-top uk-margin-bottom" uk-grid>
-                    <div class="uk-width-expand@m   uk-margin">
-                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <div class="uk-width-expand@m uk-padding  uk-margin">
+                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 183.png" alt=""
                             uk-scrollspy="cls: uk-animation-fade; delay: 600">
                     </div>
                     <div class="uk-width-1-2@m   uk-flex uk-flex-middle">
                         <div class="banner-content" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 600">
-                            <div class="h1-banner-text uk-padding napravlenia_textblock ">
+                            <div class="h1-banner-text uk-padding napravlenia_textblock_2">
                                 Интересные задания
                             </div>
                         </div>
@@ -568,24 +568,24 @@
                 <section class="uk-flex-between one-section  uk-padding uk-margin-top uk-margin-bottom" uk-grid>
                     <div class="uk-width-1-2@m   uk-flex uk-flex-middle">
                         <div class="banner-content" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 600">
-                            <div class="h1-banner-text uk-padding napravlenia_textblock ">
+                            <div class="h1-banner-text uk-padding napravlenia_textblock_2">
                                 Минимум нагрузки - максимум пользы
                             </div>
                         </div>
                     </div>
-                    <div class="uk-width-expand@m   uk-margin">
-                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <div class="uk-width-expand@m uk-padding  uk-margin">
+                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 184.png" alt=""
                             uk-scrollspy="cls: uk-animation-fade; delay: 600">
                     </div>
                 </section>
                 <section class="uk-flex-between one-section  uk-padding uk-margin-top uk-margin-bottom" uk-grid>
-                    <div class="uk-width-expand@m   uk-margin">
-                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <div class="uk-width-expand@m  uk-padding uk-margin">
+                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 185.png" alt=""
                             uk-scrollspy="cls: uk-animation-fade; delay: 600">
                     </div>
                     <div class="uk-width-1-2@m   uk-flex uk-flex-middle">
                         <div class="banner-content" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 600">
-                            <div class="h1-banner-text uk-padding napravlenia_textblock ">
+                            <div class="h1-banner-text uk-padding napravlenia_textblock_2">
                                 А самое главное - обучение индивидуальное, поэтому наиболее эффективное!
                             </div>
                         </div>
