Английский язык начальная школа 2

--- a/шаблон — направления-начальная школа - английский-язык.html
+++ b/шаблон — направления-начальная школа - английский-язык.html
@@ -254,13 +254,26 @@
                     </div>
                 </div>
                 <div class="uk-width-expand@m uk-padding-remove">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 187.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
                 </div>
             </section>
         </div>
         <div class="container">
             <div class="container-item">
+                <section class="two-section-dop-icons uk-scrollspy-inview "
+                    uk-scrollspy="cls: uk-animation-fade; delay: 600">
+
+                    <div alt="" class="elevn-section-img3 icons-radius icons-style color10" src="">
+                    </div>
+                    <div alt="" class="elevn-section-img4 icons-radius icons-style color7" src=" ">
+                    </div>
+                    <div class="nine-section-img1 icons-shadow icons-style" tabindex="0">
+                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/кубВ.svg">
+                    </div>
+
+
+                </section>
                 <h3>Хотите узнать больше?</h3>
                 <h4>Оставьте заявку на бесплатный урок</h4>
                 <form action="" class="uk-grid-small banner-trend-form napravlenia_nach" uk-grid>
@@ -307,7 +320,10 @@
                             Наверное, с ним можно подружиться.
 
                         </div>
-
+                        <div class="icons-block uk-scrollspy-inview uk-flex uk-flex-center uk-padding"
+                            uk-scrollspy="cls: uk-animation-fade; delay: 600">
+                            <img alt="" class="" src="https://cdn.nyutonika.ru/images/pages-napr/Frame 188.png">
+                        </div>
                     </div>
                 </section>
                 <section class="two-section-dop">
@@ -326,7 +342,11 @@
                         <br>
                         Пробелы в знаниях растут как снежный ком.
                     </p>
-                    <p class="uk-text-center uk-scrollspy-inview uk-text-large uk-text-bold"
+                    <div class="icons-block uk-scrollspy-inview uk-flex uk-flex-center uk-padding"
+                        uk-scrollspy="cls: uk-animation-fade; delay: 600">
+                        <img alt="" class="" src="https://cdn.nyutonika.ru/images/pages-napr/Frame 189.png">
+                    </div>
+                    <p class="uk-text-center uk-scrollspy-inview uk-text-large uk-text-bold uk-margin-medium-bottom"
                         uk-scrollspy="cls: uk-animation-slide-bottom; delay: 400">
                         Дети, не изучившие и половины грамматики родного языка, вынуждены быстро переключаться на новые
                         схемы построения предложений, не говоря уже о сложном произношении и абсолютно незнакомой
@@ -334,8 +354,12 @@
                         В таких условиях на пятерки выходят только школьники, изучающие английский язык с
                         детского сада или прибегающие к сторонней помощи.
                     </p>
-
+                    <div class="icons-block uk-scrollspy-inview uk-flex uk-flex-center "
+                        uk-scrollspy="cls: uk-animation-fade; delay: 600">
+                        <img alt="" class="" src="https://cdn.nyutonika.ru/images/pages-napr/Frame 190.png">
+                    </div>
                 </section>
+
                 <section class="container-item">
 
 
@@ -350,6 +374,26 @@
                         придется - дети сами потянутся к новым знаниям.
 
                     </p>
+
+                </section>
+
+            </div>
+        </div>
+
+
+        <div class="problems problems_malisham color16">
+
+            <div class="container">
+                <section class="nine-section-dop-icons uk-scrollspy-inview uk-padding"
+                    uk-scrollspy="cls: uk-animation-fade; delay: 600">
+                    <div class="seven-section-img2 icons-block icons-style ">
+                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/книгаА.svg">
+                    </div>
+
+
+                    <div class="nine-section-img5 icons-block icons-style ">
+                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/кубА.svg">
+                    </div>
                 </section>
             </div>
         </div>
@@ -358,11 +402,8 @@
 
 
 
+        <div class="diagnostika-malisham  ">
 
-
-
-
-        <div class="problems problems_malisham">
             <div class="container">
                 <section class="container-item">
                     <h3 class="uk-text-center title-trend-block uk-scrollspy-inview "
@@ -370,12 +411,12 @@
                     </h3>
                 </section>
             </div>
+
             <div class="container">
                 <section class="container-item">
 
-                    <div class="uk-grid-row-large uk-flex-center uk-grid-column-large" uk-grid>
-                        <div
-                            class="uk-width-1-3@m uk-width-1-2@s uk-flex-column uk-text-center uk-flex  uk-text-default">
+                    <div class="uk-flex-center napravlenia_textblock_block">
+                        <div class="uk-flex-column uk-text-center napravlenia_textblock_3 uk-text-default">
                             <p class="efficiency-blok-img"><span class="color7"></span></p>
                             <br>
                             <p class="napravlenia_textblock uk-text-center">От A до Z</p>
@@ -383,8 +424,7 @@
                             Используя карточки и интерактивные задания, превращаем знакомство с алфавитом в
                             увлекательную игру.
                         </div>
-                        <div
-                            class="uk-width-1-3@m uk-width-1-2@s uk-flex-column uk-text-center uk-flex-middle uk-text-default">
+                        <div class="uk-flex-column uk-text-center napravlenia_textblock_3     uk-text-default">
                             <p class="efficiency-blok-img"><span class="color10"></span></p>
                             <br>
                             <p class="napravlenia_textblock uk-text-center">Формируем правильное
@@ -394,8 +434,7 @@
                             повторять. Подготовленные скороговорки и лайфхаки станут прочной основой красивой речи и
                             неизбежно станут любимой частью урока.
                         </div>
-                        <div
-                            class="uk-width-1-3@m uk-width-1-2@s uk-flex-column uk-text-center uk-flex-middle uk-text-default">
+                        <div class="uk-flex-column uk-text-center  napravlenia_textblock_3    uk-text-default">
                             <p class="efficiency-blok-img"><span class="color13"></span></p>
                             <br>
                             <p class="napravlenia_textblock uk-text-center">Помогаем преодолеть языковой
@@ -404,8 +443,7 @@
                             Знания - еще не все. Помогаем ученику привыкнуть общаться на английском, в процессе повышая
                             его уверенность в себе.
                         </div>
-                        <div
-                            class="uk-width-1-3@m uk-width-1-2@s uk-flex-column uk-text-center uk-flex-middle uk-text-default">
+                        <div class="uk-flex-column uk-text-center napravlenia_textblock_3      uk-text-default">
                             <p class="efficiency-blok-img"><span class="color10"></span></p>
                             <br>
                             <p class="napravlenia_textblock uk-text-center">Грамматика</p>
@@ -413,8 +451,7 @@
                             Разберем основные правила построения предложений для времен Present Simple, Past Simple,
                             Future Simple и Present Continuous.
                         </div>
-                        <div
-                            class="uk-width-1-3@m uk-width-1-2@s uk-flex-column uk-text-center uk-flex-middle uk-text-default">
+                        <div class="uk-flex-column uk-text-center napravlenia_textblock_3    uk-text-default">
                             <p class="efficiency-blok-img"><span class="color13"></span></p>
                             <br>
                             <p class="napravlenia_textblock uk-text-center">Чтение</p>
@@ -422,8 +459,7 @@
                             Учимся выделению важных компонентов любого текста или рассказа, поиску информации,
                             составлению краткого изложения.
                         </div>
-                        <div
-                            class="uk-width-1-3@m uk-width-1-2@s uk-flex-column uk-text-center uk-flex-middle uk-text-default">
+                        <div class="uk-flex-column uk-text-center napravlenia_textblock_3      uk-text-default">
                             <p class="efficiency-blok-img"><span class="color7"></span></p>
                             <br>
                             <p class="napravlenia_textblock uk-text-center">Аудирование</p>
@@ -431,16 +467,14 @@
                             Чтобы в будущем воспринимать беглую речь - начнем готовиться уже сейчас! Слушаем диалоги и
                             короткие рассказы, анализируем и отвечаем на вопросы.
                         </div>
-                        <div
-                            class="uk-width-1-3@m uk-width-1-2@s uk-flex-column uk-text-center uk-flex-middle uk-text-default">
+                        <div class="uk-flex-column uk-text-center napravlenia_textblock_3     uk-text-default">
                             <p class="efficiency-blok-img"><span class="color13"></span></p>
                             <br>
                             <p class="napravlenia_textblock uk-text-center">Лексика</p>
                             <br>
                             Более 1000 новых слов, и каждое из них - нужное и используется в повседневной жизни.
                         </div>
-                        <div
-                            class="uk-width-1-3@m uk-width-1-2@s uk-flex-column uk-text-center uk-flex-middle uk-text-default">
+                        <div class="uk-flex-column uk-text-center napravlenia_textblock_3    uk-text-default">
                             <p class="efficiency-blok-img"><span class="color7"></span></p>
                             <br>
                             <p class="napravlenia_textblock uk-text-center">Я и мой мир</p>
@@ -448,8 +482,7 @@
                             Составляем небольшие эссе о себе и окружающих, фантазируем на тему путешествий или каникул и
                             многое другое!
                         </div>
-                        <div
-                            class="uk-width-1-3@m uk-width-1-2@s uk-flex-column uk-text-center uk-flex-middle uk-text-default">
+                        <div class="uk-flex-column uk-text-center napravlenia_textblock_3     uk-text-default">
                             <p class="efficiency-blok-img"><span class="color10"></span></p>
                             <br>
                             <p class="napravlenia_textblock uk-text-center">Социальные взаимодействия</p>
@@ -461,8 +494,19 @@
             </div>
         </div>
 
-        <div class="problems problems_malisham">
+        <div class="problems problems_malisham color16">
             <div class="container">
+                <section class="nine-section-dop-icons uk-scrollspy-inview "
+                    uk-scrollspy="cls: uk-animation-fade; delay: 600">
+                    <div class="nine-section-img1 icons-shadow icons-style" tabindex="0">
+                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/кубС.svg">
+                    </div>
+                    <div class="nine-section-img5 icons-block  icons-style" tabindex="0">
+                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/книга-облако.svg">
+                    </div>
+
+
+                </section>
                 <section class="container-item">
                     <h3 class="uk-text-center title-trend-block uk-scrollspy-inview "
                         uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">Английский - не просто про общение
@@ -473,23 +517,28 @@
                     <div class="item-circle">
                         <ul>
                             <li>
-                                <p class="efficiency-blok-img"> </p>
+                                <img alt="" class="" src="https://cdn.nyutonika.ru/images/pages-napr/Frame 191.png">
                             </li>
                             <li>
+                                <p class="efficiency-blok-img"><span class="color11 uk-margin"></span></p>
                                 Улучшение памяти
-                                <p class="efficiency-blok-img"><span class="color11"></span></p>
+
                             </li>
                             <li>
+                                <p class="efficiency-blok-img"><span class="color13 uk-margin"></span></p>
                                 Творчество
-                                <p class="efficiency-blok-img"><span class="color13"></span></p>
+
                             </li>
                             <li>
+                                <img alt="" class="" src="https://cdn.nyutonika.ru/images/pages-napr/Frame 193.png">
                             </li>
                             <li>
+                                <img alt="" class="" src="https://cdn.nyutonika.ru/images/pages-napr/Frame 193-2.png">
                             </li>
                             <li>
+                                <p class="efficiency-blok-img"><span class="color12 uk-margin"></span></p>
                                 Всестороннее развитие
-                                <p class="efficiency-blok-img"><span class="color12"></span></p>
+
                             </li>
                         </ul>
                     </div>
