--- a/шаблон — направления-малышам-раннее-развитие.html
+++ b/шаблон — направления-малышам-раннее-развитие.html
@@ -259,7 +259,7 @@
                     </div>
                 </div>
                 <div class="uk-width-expand@m uk-padding-remove">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 194.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
                 </div>
             </section>
@@ -331,7 +331,7 @@
                     <div class="uk-text-center" uk-grid>
                         <div class="uk-width-1-3@m">
                             <div class="">
-                                <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                                <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 199.png" alt=""
                                     uk-scrollspy="cls: uk-animation-fade; delay: 600"
                                     class="uk-scrollspy-inview uk-margin-bottom">
                                 <p class="uk-text-center uk-text-bolder uk-scrollspy-inview "
@@ -346,7 +346,7 @@
                         </div>
                         <div class="uk-width-1-3@m">
                             <div class="">
-                                <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                                <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 200.png" alt=""
                                     uk-scrollspy="cls: uk-animation-fade; delay: 600"
                                     class="uk-scrollspy-inview uk-margin-bottom">
                                 <p class="uk-text-center uk-text-bolder uk-scrollspy-inview "
@@ -359,7 +359,7 @@
                         </div>
                         <div class="uk-width-1-3@m">
                             <div class="">
-                                <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                                <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 201.png" alt=""
                                     uk-scrollspy="cls: uk-animation-fade; delay: 600"
                                     class="uk-scrollspy-inview uk-margin-bottom">
                                 <p class="uk-text-center uk-text-bolder  uk-scrollspy-inview "
@@ -407,7 +407,7 @@
 
                     </div>
                     <div class="uk-width-expand@m">
-                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 195.png" alt=""
                             uk-scrollspy="cls: uk-animation-fade; delay: 600">
                     </div>
 
@@ -420,7 +420,7 @@
                 <section class="uk-flex-between one-section uk-margin-large-bottom" uk-grid>
 
                     <div class="uk-width-expand@m">
-                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 196.png" alt=""
                             uk-scrollspy="cls: uk-animation-fade; delay: 600">
                     </div>
                     <div class="uk-width-1-2@m uk-flex uk-flex-middle">
@@ -455,7 +455,7 @@
                     <div class="uk-text-center" uk-grid>
                         <div class="uk-width-1-2@m">
                             <div class="">
-                                <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                                <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 197.png" alt=""
                                     uk-scrollspy="cls: uk-animation-fade; delay: 600"
                                     class="uk-scrollspy-inview uk-margin-bottom">
                                 <p class="uk-text-center uk-text-bolder uk-scrollspy-inview "
@@ -467,7 +467,7 @@
                         </div>
                         <div class="uk-width-1-2@m">
                             <div class="">
-                                <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                                <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 198.png" alt=""
                                     uk-scrollspy="cls: uk-animation-fade; delay: 600"
                                     class="uk-scrollspy-inview uk-margin-bottom">
                                 <p class="uk-text-center uk-text-bolder uk-scrollspy-inview "
@@ -488,7 +488,16 @@
                             </span>
                         </p>
                     </div>
-                    <h3 class="uk-text-center title-trend-block uk-scrollspy-inview uk-margin-large-top"
+
+
+                </section>
+
+            </div>
+        </div>
+        <div class="problems problems_malisham">
+            <div class="container">
+                <section class="container-item">
+                    <h3 class="uk-text-center title-trend-block uk-scrollspy-inview uk-margin-xlarge-top"
                         uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">
                         Ньютоника раскрывает потенциал ребнка
                     </h3>
@@ -498,12 +507,9 @@
                         знает об особенностях развития детей разного возраста и умеет грамотно и системно передавать
                         детям новые знания.
                     </div>
-
                 </section>
-
             </div>
         </div>
-
         <div class="">
             <div class="container">
 
