Логопедия - психолог (правка текста)

--- a/шаблон — направления-логопедия - психолог.html
+++ b/шаблон — направления-логопедия - психолог.html
@@ -435,7 +435,7 @@
                                     Адаптация к незнакомой обстановке
                                     <ul>
                                         <li>Занятия помогают привыкнуть к детскому саду, школе и любому новому
-                                            коллективу, учат общаться и проговаривать свои эмоции</li>
+                                            коллективу</li>
                                     </ul>
                                 </li>
                                 <li>
@@ -468,7 +468,7 @@
                                     Выражение негативных эмоций
                                     <ul>
                                         <li>Ребенок учится выражать свои чувства словами, а не капризами и агрессией.
-                                            Рассказываем, как обсуждать спорные темы без ссор и плохого настроения.
+                                            Учим, как обсуждать спорные темы без ссор и плохого настроения
                                         </li>
                                     </ul>
                                 </li>
@@ -476,7 +476,7 @@
                                     Стресс, страхи и вредные привычки
                                     <ul>
                                         <li>Находим причину тревоги и помогаем ребенку осмыслить свои переживания. Во
-                                            время беседы с родителями создаем памятку поддержки в стрессовой ситуации.
+                                            время беседы с родителями создаем памятку поддержки в стрессовой ситуации
                                         </li>
                                     </ul>
                                 </li>
@@ -484,22 +484,24 @@
                                     Гиперактивность
                                     <ul>
                                         <li>Психолог занимается выявлением и исключением раздражителей, мешающих ребенку
-                                            сосредоточиться и создает систему мотивирующих поощрений.
+                                            сосредоточиться и создает систему мотивирующих поощрений
                                         </li>
                                     </ul>
                                 </li>
                                 <li>
                                     Развитие эмоционального интеллекта и осознанности
                                     <ul>
-                                        <li>Помогаем ребенку понять себя и окружающих, учим
+                                        <li>Помогаем ребенку понять себя и окружающих
                                         </li>
                                     </ul>
                                 </li>
                                 <li>
                                     Уверенность и самовыражение
                                     <ul>
-                                        <li>Почему так важно верить в себя? Объясняем, показываем и вместе движемся к
-                                            общей цели.
+                                        <li>
+                                            Объясняем и показываем почему так важно верить в себя, и вместе
+                                            движемся к
+                                            общей цели
                                         </li>
                                     </ul>
                                 </li>
