--- a/шаблон — направления-малышам-дефектолог.html
+++ b/шаблон — направления-малышам-дефектолог.html
@@ -375,7 +375,7 @@
                     <div class="uk-text-center uk-scrollspy-inview napravlenia_doshkoln_banner-text2"
                         uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">
                         <p>
-                            <span class="uk-padding-remove-bottom">Убедитесь сами, записавшись на
+                            <span class="uk-padding-remove-bottom">Убедитесь сами! Запишите ребенка на
                                 занятия!</span>
                         </p>
                     </div>
@@ -419,9 +419,8 @@
                                     <li>расширение кругозора, знание о себе, бытовых предметах и природе</li>
                                     <li>увеличение словарного запаса, запуск речи</li>
                                     <li>улучшение ориентировки в пространстве</li>
-                                    <li>формирование элементарных математических представлений, счет до 3, один-много,
-                                        сравнение групп предметов</li>
-                                    <li>хорошее зрительное восприятие, цвет, форма, величина</li>
+                                    <li>формирование элементарных математических представлений</li>
+                                    <li>развитие зрительного восприятия: цвета, формы, величины</li>
 
                                 </ul>
                             </div>
@@ -435,9 +434,9 @@
                             <div class="uk-padding napravlenia_textblock ">
                                 <ul class="napravlenia_spisok">
 
-                                    <li>рост внимания, поиск недостающих или парных предметов и изображений</li>
+                                    <li>развитие внимания: поиск недостающих или парных предметов и изображений</li>
                                     <li>формирование зрительной и слуховой памяти</li>
-                                    <li>тренировка наглядно-действенного мышления, классификация по нескольким признакам
+                                    <li>тренировка наглядно-действенного мышления
                                     </li>
                                     <li>развитие мелкой и общей моторики</li>
                                     <li>самостоятельность</li>
