--- a/шаблон — направления-малышам-логопед.html
+++ b/шаблон — направления-малышам-логопед.html
@@ -302,12 +302,12 @@
                         uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">
                         <div class="napravlenia_nachscola_text uk-text-center">
                             “Сла шаша по шоше”, - гордо произносит малыш, хлопая в ладоши и сияя от того, как здорово он
-                            справился.
+                            справился
                         </div>
                         <p class="uk-text-default uk-text-bolder uk-padding-remove-bottom uk-margin-top uk-text-center">
-                            Для мамы с папой его неумелое произношение кажется очаровательными и
+                            Для мамы с папой его неумелое произношение кажется очаровательным, и
                             они готовы вечно слушать детский лепет, будь то “Шаша с шуской” или “пятинаташка”. <br>
-                            Проходит пара месяцев и ребенок уже активно во всех подробностях рассказывает о том, как
+                            Проходит пара месяцев, и ребенок уже активно во всех подробностях рассказывает о том, как
                             прошел его день.
                             <br>
                             Но что делать, если речь дошкольника даже в 3-4 года напоминает кашу из разнообразных
@@ -332,7 +332,7 @@
                     <p class="uk-text-center uk-scrollspy-inview"
                         uk-scrollspy="cls: uk-animation-slide-bottom; delay: 400">Постоянно находясь рядом с ребенком,
                         родители привыкают к его манере общения и поведению, поэтому часто не замечают проблем малыша
-                        или абсолютно уверены в том, что его забавные привычки пропадут с возрастом.
+                        или абсолютно уверены в том, что его забавные привычки пропадут с возрастом
 
                     </p>
 
@@ -355,7 +355,7 @@
                         <div class="efficiency efficiency-malisham efficiency_rus-nach">
                             <ul>
                                 <li>позднее развитие речи или ее отсутствие</li>
-                                <li>Отсутствие фразовой речи</li>
+                                <li>отсутствие фразовой речи</li>
                                 <li>назальность - ребенок говорит &ldquo;в нос&rdquo;</li>
                                 <li>заикание, вынужденные паузы в середине предложения</li>
                             </ul>
@@ -368,8 +368,10 @@
                         <div class="efficiency efficiency-malisham efficiency_rus-nach">
                             <ul>
                                 <li>скудный словарный запас (менее 800 слов)</li>
-                                <li>сокращение сложных слов до одного слога, использование различных сокращений для
-                                    одного слова или использование одного обозначения для разных слов (&ldquo;ма&rdquo;
+                                <li>сокращение сложных слов до одного слога</li>
+                                <li> использование различных сокращений для
+                                    одного слова</li>
+                                <li>использование одного обозначения для разных слов (&ldquo;ма&rdquo;
                                     - мама, машина, маленький; машина - би, ма, си, на)</li>
                             </ul>
                         </div>
@@ -444,14 +446,11 @@
                                 <ul class="napravlenia_spisok">
                                     <li>запуск речи</li>
                                     <li>формирование фразовой речи</li>
-                                    <li>развитие логики. мышления, внимания и памяти</li>
+                                    <li>развитие логики, мышления, внимания и памяти</li>
                                     <li>увеличение словарного запаса</li>
                                     <li>формирование фонематического слуха</li>
-                                    <li>навыки самостоятельности и активности</li>
                                     <li>понятная окружающим речь</li>
-                                    <li>совершенствование грамматики</li>
                                     <li>правильное дыхание</li>
-                                    <li>развитие мелкой моторики</li>
                                 </ul>
                             </div>
 
@@ -617,11 +616,9 @@
                     <h4 class="uk-text-center title-trend-block"
                         uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">Почему мы?
                     </h4>
-                    <div class="text-trend-block"> Наши уроки проходят в комфортной обстановке,
-                        <br>помогая ребенку
-                        раскрыться,
-                        <br>не стесняться задавать
-                        вопросы
+                    <div class="text-trend-block"> Наши уроки проходят в комфортной обстановке
+                        <br>и помогают ребенку
+                        раскрыться
                     </div>
                     <div class="form-trend-list">
                         <div><span class="color11"></span>держим вас в курсе, <br>рассказываем про успехи ребенка и
@@ -630,8 +627,8 @@
                         <div><span class="color13"></span>с нами интересно - <br> находим подход к каждому
 
                         </div>
-                        <div><span class="color14"></span>идем в комфортном для ребенка темпе,<br>не перегружаем,
-                            <br>идем по
+                        <div><span class="color14"></span>идем в комфортном для ребенка темпе
+                            <br>по
                             индивидуальному маршруту
                         </div>
 
