Личный кабинет: кнопки входа в кабинет занятия

--- a/шаблон — личный кабинет — личный кабинет общая страница.html
+++ b/шаблон — личный кабинет — личный кабинет общая страница.html
@@ -141,7 +141,7 @@
                     <h2>Ближайшие занятия</h2>
                     <ul class="uk-grid-match uk-grid-small  uk-child-width-1-2@m uk-child-width-1-1@s" uk-grid>
                         <li>
-                            <div class="card-lk color-next-class-card">
+                            <div class="card-lk color-next-class-card rooms">
                                 <div class="card-lk_title">Занятие от 04.05.23 10:02<a>Нет предоплаченных занятий</a>
                                 </div>
                                 <div class="card-lk_content">
@@ -149,15 +149,21 @@
                                     <p><span>Преподаватель:</span>Тестовый логопед</p>
                                     <p><span>Предмет:</span>Русский язык</p>
                                 </div>
-                                <div class="card-lk_button">
-                                    <button type="submit">
-                                        На занятие
+                                <div class="card-lk_button room-type">
+                                    <button class="pruffeme" type="submit">
+                                        В комнату
+                                    </button>
+                                    <button class="zoom" type="submit">
+                                        Zoom
+                                    </button>
+                                  <button class="skype" type="submit">
+                                        Skype
                                     </button>
                                 </div>
                             </div>
                         </li>
                         <li>
-                            <div class="card-lk color-next-class-card">
+                            <div class="card-lk color-next-class-card rooms">
                                 <div class="card-lk_title">Занятие от 04.05.23 10:02</div>
                                 <div class="card-lk_content">
                                     <p><span>Ученик:</span>Тестовый ученик 1</p>
